[package]
name = "test_bellman"
version = "0.1.0"
authors = ["phqb <bao.phan@kyber.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = { package = "bellman_ce", path = "../bellman" }
lazy_static = "1.4.0"
failure = "0.1.8"
log = "0.4.14"
simple_logger = "1.11.0"
hex = "0.4.3"